Add admin url in profile

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -52,7 +52,7 @@
             <tr>
             {% if user.is_admin == 1 %}
             <td> <b>권한</b> </td>
-            <td> 관리자 입니다</td>
+            <td> <a href="/admin/"> 관리자 입니다</a></td>
             {% else %}
             <td> <b>권한</b> </td>
             <td> 일반 유저 입니다. </td>
