--- a/accounts/templates/accounts/SignUp.html
+++ b/accounts/templates/accounts/SignUp.html
@@ -1,12 +1,23 @@
-{% include "letter/navbar.html" %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @font-face {
+            font-family: 'MapoFlowerIsland';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        body{ font-family:'MapoFlowerIsland' !important; }
+    </style>
     <meta charset="utf-8" />
     <title>To, morrow 회원가입</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container mb-5">
+        {% include "letter/navbar.html" %}
+      </div>
     {% load static %}
 
     {% block content %}
@@ -27,14 +38,7 @@
                 <a href="{% url 'accounts:Index' %}"><button class="btn btn-primary mx-auto d-block mt-lg-2">메인화면</button> </a>  
             </div>
         </div>
-
-    
-        
         </form>
-    
     {% endblock %}
-    
-    
-
-</body>
+    </body>
 </html>
