--- a/letter/templates/letter/show_delete_list.html
+++ b/letter/templates/letter/show_delete_list.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            @font-face {
+                font-family: 'MapoFlowerIsland';
+                src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+                font-weight: normal;
+                font-style: normal;
+            }
+            body{ font-family:'MapoFlowerIsland' !important; }
+        </style>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
         {% if messages %}
@@ -11,58 +20,54 @@
             </script>
         {% endfor %}
         {% endif %}
-        <h2> {{ nickname}}'s Trash List</h2>
     </head>
     <body>
-        <div class="d-block">
+        <div class="container mb-5">
             {% include "letter/navbar.html" %}
         </div>
-     <div class="container-md vh-100 d-flex align-items-center col justify-content-center">
-            <div class="col-auto" >
-        <table>
-            <table class="table table-hover">
+        <div class="container-md">
+            <div class="col-auto" style = "overflow-y:auto; height:70%;">
+                <br><h2>Trash List</h2>
+                <table class="table table-hover">
                     <thead>
                         <tr>
-                        <th scope="col">Idx</td>
-                        <th scope="col">emotion</td>
-                        <th scope="col">Sender</td>
-                        <th scope="col">Contents</td>
-                        <th scope="col">SendDate</td>
+                            <th scope="col">Idx</th>
+                            <th scope="col">emotion</th>
+                            <th scope="col">Sender</th>
+                            <th scope="col">Contents&nbsp;&nbsp;&nbsp;</th>
+                            <th scope="col">SendDate</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for col in result %}
-                    <tr onclick="location.href='/letter/{{page}}/detail/{{ col.letterId }}/'"">
-                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.letterId}}&nbsp;&nbsp;&nbsp;</td>
-                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">
-                            {% if col.emotion >= 62 and col.emotion <= 100  %}
-                        
-                            <object data="{% static 'assets/smile.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
-                            {% elif col.emotion >= 37 and col.emotion < 62 %}
-                              
-                                <object data="{% static 'assets/middle.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
-                            {% elif col.emotion > 0 and col.emotion < 37 %}
+                        <tr onclick="location.href='/letter/{{page}}/detail/{{ col.letterId }}/'"">
+                            <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.letterId}}&nbsp;&nbsp;&nbsp;</td>
+                            <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">
+                                {% if col.emotion >= 62 and col.emotion <= 100  %}
                             
-                                <object data="{% static 'assets/thinking.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
-                            {% else %}
-                                에러
-                            {% endif %}
-                        </td>
-                        
-                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.senderId}}&nbsp;&nbsp;&nbsp;</td>
-                        <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.content}}&nbsp;&nbsp;&nbsp;</td>
-                        <td onClick="location.href='/letter/receive/detail/{{ coll.letterId }}/'">{{col.sendDate | date:"Y.m.d H:i "}}</td>
-                        <td onClick="location.href='/letter/delreceive/{{col.letterId}}/'"">
-                            <object data="{% static 'assets/trash.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
-                        </td>
-                    </tr>
+                                <object data="{% static 'assets/smile.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                                {% elif col.emotion >= 37 and col.emotion < 62 %}
+                                
+                                    <object data="{% static 'assets/middle.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                                {% elif col.emotion > 0 and col.emotion < 37 %}
+                                
+                                    <object data="{% static 'assets/thinking.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                                {% else %}
+                                    에러
+                                {% endif %}
+                            </td>
+                            
+                            <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.senderId}}&nbsp;&nbsp;&nbsp;</td>
+                            <td onClick="location.href='/letter/receive/detail/{{ col.letterId }}/'">{{col.content}}&nbsp;&nbsp;&nbsp;</td>
+                            <td onClick="location.href='/letter/receive/detail/{{ coll.letterId }}/'">{{col.sendDate | date:"Y.m.d H:i "}}</td>
+                            <td onClick="location.href='/letter/delreceive/{{col.letterId}}/'">
+                                <object data="{% static 'assets/trash.svg' %}" type="image/svg+xml" style="height: 20px; width :20px;" ></object>           
+                            </td>
+                        </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
-
-
-    <a href="{% url 'accounts:Index' %}"><button>메인화면</button>
-</body>
+    </body>
 </html>
