--- a/letter/templates/letter/letterIsent.html
+++ b/letter/templates/letter/letterIsent.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head> 
+        <style>
+            @font-face {
+                font-family: 'MapoFlowerIsland';
+                src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+                font-weight: normal;
+                font-style: normal;
+            }
+            body{ font-family:'MapoFlowerIsland' !important; }
+        </style>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">  <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/journal/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
         
@@ -15,13 +24,13 @@
     </head>
 
     <body>
-        <div class="d-block">
+        <div class="container mb-5">
             {% include "letter/navbar.html" %}
         </div>
 
         <div class="container-md">
             <div class="col-auto" style="overflow-y: auto; height: 70%; ">
-                <h2>Letter I sent</h2>
+                <br><h2>Letter I sent</h2>
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -45,10 +54,7 @@
                         {% endfor %}
                     </tbody>
                 </table>
-   
-            <a href="{% url 'accounts:Index' %}"><button>메인화면</button>
+            </div>
         </div>
-    </div>
-
-</body>
+    </body>
 </html>
