--- a/letter/templates/letter/writeToOthers.html
+++ b/letter/templates/letter/writeToOthers.html
@@ -2,6 +2,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+            @font-face {
+                font-family: 'MapoFlowerIsland';
+                src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+                font-weight: normal;
+                font-style: normal;
+            }
+            body{ font-family:'MapoFlowerIsland' !important; }
+        </style>
         <meta charset="utf-8" />
         <title>To, morrow 쓰기</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
@@ -14,7 +23,7 @@
         {% endif %}
     </head>
     <body>
-        <div class="d-block">
+        <div class="container mb-5">
             {% include "letter/navbar.html" %}
         </div>
     <form action="{% url 'letter:writeToOthers' %}" method="post">
