--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -1,2 +1,29 @@
-<h3>비밀번호 이메일 전송완료</h3>
-<p>비밀번호 재설정 이메일이 전송되었습니다.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    @font-face {
+        font-family: 'MapoFlowerIsland';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+    body{ font-family:'MapoFlowerIsland' !important; }
+</style>
+    <meta charset="utf-8" />
+    <title>To, morrow</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
+</head>
+<body>
+  <div class="container mb-5">
+    {% include "letter/navbar.html" %}
+  </div>
+  <div class="text-center pt-4">
+    <h3>비밀번호 이메일 전송완료</h3>
+    <p>비밀번호 재설정 이메일이 전송되었습니다.</p>    
+  </div>
+
+
+
+</body>
+</html>
