--- a/letter/templates/letter/writeToOthers.html
+++ b/letter/templates/letter/writeToOthers.html
@@ -33,6 +33,7 @@
                 <div class="col-12 mx-auto">
                     <h1>To, morrow To, Others</h1>
                     <div class="form-group">
+                        {{write_form.receiverGroup}}
                         <label for="Content" class="form-label mt-4">내일의 누군가에게 하고싶은 말</label>
                         <textarea class="form-control" id="exampleTextarea" rows="10" value={{ write_form.content }}</textarea>
                     </div>
