--- a/accounts/templates/accounts/password.html
+++ b/accounts/templates/accounts/password.html
@@ -18,7 +18,7 @@
   <div class="container mb-5">
     {% include "letter/navbar.html" %}
   </div>
-    <h3 class="mt-lg-3" style="text-align:center;">비밀번호 변경</h3>
+    <h3 class="mt-lg-3 pt-4" style="text-align:center;">비밀번호 변경</h3>
     <!-- {% if error_message %}
     <p><strong>{{ error_message }}</strong></p>
     {% endif %} -->
@@ -30,6 +30,8 @@
       {% endfor %}
     {% endif %}
     
+
+    
     <form method="post" style="text-align:center;">
       {% csrf_token %}
       <div class="container mt-lg-4">
@@ -37,12 +39,13 @@
           {{ password_change_form }}
         </div>
         <div class="justify-content-center">
-          <button type="submit"  class="btn btn-primary mx-auto d-block mt-lg-2">비밀번호 변경</button>
+          <button type="submit"  class="btn btn-primary mx-auto d-block mt-lg-2 mb-5">비밀번호 변경</button>
         </div>
     </div>
       
       
     </form>
+
 
 </body>
 </html>
