--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -1,27 +1,51 @@
-{% block content %}
-    {% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
-        <form action="" method="post">
-        {% csrf_token %}
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Change my password" /></td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
-    {% endif %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    @font-face {
+        font-family: 'MapoFlowerIsland';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+    body{ font-family:'MapoFlowerIsland' !important; }
+</style>
+    <meta charset="utf-8" />
+    <title>To, morrow</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
+</head>
+<body>
+  <div class="container mb-5">
+    {% include "letter/navbar.html" %}
+  </div>
+  {% block content %}
+  {% if validlink %}
+      <p>Please enter (and confirm) your new password.</p>
+      <form action="" method="post">
+      {% csrf_token %}
+          <table>
+              <tr>
+                  <td>{{ form.new_password1.errors }}
+                      <label for="id_new_password1">New password:</label></td>
+                  <td>{{ form.new_password1 }}</td>
+              </tr>
+              <tr>
+                  <td>{{ form.new_password2.errors }}
+                      <label for="id_new_password2">Confirm password:</label></td>
+                  <td>{{ form.new_password2 }}</td>
+              </tr>
+              <tr>
+                  <td></td>
+                  <td><input type="submit" value="Change my password" /></td>
+              </tr>
+          </table>
+      </form>
+  {% else %}
+      <h1>Password reset failed</h1>
+      <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+  {% endif %}
 {% endblock %}
+
+
+</body>
+</html>
