--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -1,8 +1,44 @@
-<h1>비밀번호 재설정</h1>
-<p>이메일을 입력하세요</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <style>
+    @font-face {
+        font-family: 'MapoFlowerIsland';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+    body{ font-family:'MapoFlowerIsland' !important; }
+</style>
+    <meta charset="utf-8" />
+    <title>To, morrow</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/litera/bootstrap.min.css" integrity="sha384-enpDwFISL6M3ZGZ50Tjo8m65q06uLVnyvkFO3rsoW0UC15ATBFz3QEhr3hmxpYsn" crossorigin="anonymous">
+</head>
+<body>
+  <div class="container mb-5">
+    {% include "letter/navbar.html" %}
+  </div>
+  
+  <div class="container mt-lg-5">
+    <div class="mx-auto text-center mb-4"><br><br>
+        <h1>비밀번호 재설정</h1>
+        <p>이메일을 입력하세요</p>
+    </div>
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="이메일 전송">
-</form>
+    <div class="mx-auto text-center"><br>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="mx-auto" value="이메일 전송">
+        </form>
+    </div>
+   </div>
+
+
+
+
+  
+
+
+</body>
+</html>
